[package]
name = "token-deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw20 = "1.1.2"
cosmwasm-std = "0.16.0"
tokio = { version = "1", features = ["full"] }
cosmrs = { version = "0.14.0" }